Add Help to side menu Allow Help menu to Guests

--- a/Client/src/app/pages/navigation/side-menu/side-menu.component.html
+++ b/Client/src/app/pages/navigation/side-menu/side-menu.component.html
@@ -75,4 +75,5 @@
       <mat-icon>login</mat-icon><span class="nav-caption">Login/Register</span>
     </a>
   </ng-template>
+  <a mat-list-item routerLink="/" (click)="help()"> <mat-icon>help</mat-icon><span class="nav-caption">Help</span> </a>
 </mat-nav-list>
