--- a/Client/src/app/pages/navigation/avatar/avatar.component.html
+++ b/Client/src/app/pages/navigation/avatar/avatar.component.html
@@ -6,14 +6,23 @@
   </div>
 </div>
 <mat-menu #menu="matMenu">
-  <button mat-menu-item (click)="userDetails()">
-    <mat-icon>account_circle</mat-icon>
-    <span>Account</span>
-  </button>
-  <button mat-menu-item (click)="logout()">
-    <mat-icon>power_settings_new</mat-icon>
-    <span>Sign Out</span>
-  </button>
+  <ng-template [ngIf]="name" [ngIfElse]="logIn">
+    <button mat-menu-item (click)="userDetails()">
+      <mat-icon>account_circle</mat-icon>
+      <span>Account</span>
+    </button>
+    <button mat-menu-item (click)="logout()">
+      <mat-icon>power_settings_new</mat-icon>
+      <span>Sign Out</span>
+    </button>
+  </ng-template>
+  <ng-template #logIn>
+    <button mat-menu-item (click)="login()">
+      <mat-icon>login</mat-icon>
+      <span>Login/Register</span>
+    </button>
+  </ng-template>
+
   <button mat-menu-item (click)="help()">
     <mat-icon>help</mat-icon>
     <span>Help</span>
