--- a/Client/src/app/pages/navigation/avatar/avatar.component.scss
+++ b/Client/src/app/pages/navigation/avatar/avatar.component.scss
@@ -1,24 +1,25 @@
-div{
-    padding-left: 0px;
+div {
+  padding-left: 0px;
 }
 
 .avatar {
-    vertical-align: middle;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-  }
+  vertical-align: middle;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
 
-.initials{
-    width:40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 1px solid #888080;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 500;
-    padding-top: 2px;
-    overflow: hidden;
-    vertical-align: middle;
-    //background-color: #4A148C;
+.initials {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid #888080;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  padding-top: 2px;
+  overflow: hidden;
+  vertical-align: middle;
+  background-color: #fca56a;
+  color: black;
 }
