--- a/Client/src/app/pages/navigation/header/header.component.html
+++ b/Client/src/app/pages/navigation/header/header.component.html
@@ -82,7 +82,8 @@
       </ng-template>
       <ng-template #logIn>
         <li>
-          <button mat-button color="accent" (click)="openLogin()">Login/Register</button>
+          <!-- <button mat-button color="accent" (click)="openLogin()">Login/Register</button> -->
+          <app-avatar photoUrl="" name=""></app-avatar>
         </li>
       </ng-template>
     </ul>
