--- a/Client/src/app/pages/myspace/my-borrow/my-borrow.component.html
+++ b/Client/src/app/pages/myspace/my-borrow/my-borrow.component.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div *ngIf="notEmptyPost" class="col-md-12 d-flex justify-content-center">
-                  <button (click)="onClick()" type="button" class="btn btn-secondary">LOAD MORE</button>
+                  <button (click)="onLoadMore()" type="button" class="btn btn-secondary">LOAD MORE</button>
                 </div>
               </ng-template>
             </li>
@@ -268,6 +268,10 @@
                       </div>
                     </div>
                   </div>
+                </div>
+
+                <div *ngIf="notEmptyPost" class="col-md-12 d-flex justify-content-center">
+                  <button (click)="onLoadMore()" type="button" class="btn btn-secondary">LOAD MORE</button>
                 </div>
               </ng-template>
             </li>
