Fix Load More function in My Items rename variables/functions related to item name filter in My Space

--- a/Client/src/app/pages/myspace/my-borrow/my-borrow.component.html
+++ b/Client/src/app/pages/myspace/my-borrow/my-borrow.component.html
@@ -30,7 +30,7 @@
               <ng-template ngbNavContent>
                 <div class="input-group mt-3 mb-3">
                   <input
-                    [(ngModel)]="NameFilter"
+                    [(ngModel)]="nameFilter"
                     class="form-control"
                     style="background-color: rgb(252, 248, 251); border-color: rgb(218, 216, 216)"
                     (keyup)="Filter(0)"
@@ -100,7 +100,7 @@
               <ng-template ngbNavContent>
                 <div class="input-group mt-3 mb-3">
                   <input
-                    [(ngModel)]="NameFilter"
+                    [(ngModel)]="nameFilter"
                     class="form-control"
                     style="background-color: rgb(252, 248, 251); border-color: rgb(218, 216, 216)"
                     (keyup)="Filter(1)"
@@ -197,7 +197,7 @@
               <ng-template ngbNavContent>
                 <div class="input-group mt-3 mb-3">
                   <input
-                    [(ngModel)]="NameFilter"
+                    [(ngModel)]="nameFilter"
                     class="form-control"
                     style="background-color: rgb(252, 248, 251); border-color: rgb(218, 216, 216)"
                     (keyup)="Filter(2)"
