--- a/Client/src/app/pages/post/post.component.html
+++ b/Client/src/app/pages/post/post.component.html
@@ -1,1 +1,1 @@
-<app-add-edit-post [itemId]="itemId"></app-add-edit-post>
+<app-add-edit-post [itemId]="itemId" (contentChange)="onChange($event)"></app-add-edit-post>
