Fix province (Québec -> Quebec)

--- a/Client/src/app/pages/account/user-details/user-details.component.html
+++ b/Client/src/app/pages/account/user-details/user-details.component.html
@@ -71,8 +71,7 @@
           autocomplete="off"
           required
         >
-        1600 Amphitheatre Pkwy</textarea
-        >
+        </textarea>
         <mat-error *ngFor="let validation of validation_messages.address1">
           <mat-error
             class="error-message"
