Change the color of login link to red in login dialog

--- a/Client/src/app/pages/account/login/login.component.html
+++ b/Client/src/app/pages/account/login/login.component.html
@@ -48,7 +48,7 @@
     </form>
     <br /><br /><br />
     <p class="text-center">
-      Don't have an Account? <a role="button" class="blue-text" (click)="openLogin()">Sign up</a>
+      Don't have an Account? <a role="button" class="red-text" (click)="openLogin()">Sign up</a>
     </p>
   </div>
 </div>
